# jieba.vim

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  README.md  RELATED.md  SPONSORSHIP.md  TODO.md  addon-info.json  build.ps1  build.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: cd.yml  ci.yml  ci2.yml  cicd.yml  dont_push_ci_maintained_files.yml  rm_verification_cache.yml  test_setup_vim.yml
dev_scripts/: .gitignore  README.md  check_copyright.py  check_dbg.py  pyproject.toml  run_vader.py
doc/: jieba.txt
docs/: faq.md  test-taxonomy.md
docs/benchmark/: .gitignore  README.md  bench.vim  download_dataset.sh  init.lua  pyproject.toml  run_bench.py  vimrc
docs/demo/: .gitignore  Makefile  README.md  config.tape  demo_nvim.tape  demo_vim.tape  example_text.txt  init.lua  op.tape  vimrc
docs/design_choices/: 0001-simp-test-ci.md
lua/jieba_vim/: init.lua
plugin/: jieba_vim.vim
pythonx/: .gitignore  Cargo.toml  build.rs  pyproject.toml
pythonx/jieba_vim/: .ruff.toml  __init__.py  init.py  libjieba  navigation.py  preview.py
pythonx/jieba_vim/pysrc/: __init__.py  navigation.py  punc.py  test_navigation.py
pythonx/jieba_vim_rs_core/: Cargo.toml
pythonx/jieba_vim_rs_core/src/: buffer.rs  lib.rs  token.rs  utils.rs
pythonx/jieba_vim_rs_core/src/motion/: mod.rs  nmap_b.rs  nmap_e.rs  nmap_ge.rs  nmap_w.rs  omap_b.rs  omap_c_w.rs  omap_d_e.rs  omap_d_ge.rs  omap_e.rs  omap_ge.rs  omap_w.rs  word_motion.rs  xmap_b.rs  xmap_e.rs  xmap_ge.rs  xmap_w.rs
pythonx/jieba_vim_rs_core/src/token/: char.rs  isk.rs  jieba.rs  mod.rs  token_iter.rs  tokenize.rs
pythonx/jieba_vim_rs_test/: Cargo.toml
pythonx/jieba_vim_rs_test/src/: assert_elapsed.rs
pythonx/jieba_vim_rs_test/src/verified_case/: mod.rs  vim_env.rs
pythonx/jieba_vim_rs_test/src/verified_case/cases/: omap_d_e.rs  omap_d_ge.rs
pythonx/jieba_vim_rs_test_macro/: Cargo.toml
pythonx/jieba_vim_rs_test_macro/src/: verified_case.rs
pythonx/src/: lib.rs  navigation.rs  preview.rs  punc.rs  wrappers.rs
rust_backend/: .gitignore  Cargo.toml  Cross.toml  build.rs
rust_backend/jieba_vim_rs_binding_lua51/: Cargo.toml  build.rs
rust_backend/jieba_vim_rs_binding_lua51/src/: lib.rs  preview.rs  wrappers.rs
rust_backend/jieba_vim_rs_binding_py3/: Cargo.toml
rust_backend/jieba_vim_rs_binding_py3/src/: lib.rs  wrappers.rs
rust_backend/jieba_vim_rs_core/: .gitignore  Cargo.toml
rust_backend/jieba_vim_rs_core/src/: buffer.rs  lib.rs  position.rs  utils.rs
rust_backend/jieba_vim_rs_core/src/motion/: README.md  api.rs  d_special.rs  exclusive_special.rs  imap_c_left.rs  imap_c_right.rs  imap_c_w.rs  imap_s_left.rs  imap_s_right.rs  mod.rs  nmap_b.rs  nmap_e.rs  nmap_ge.rs  nmap_w.rs  omap_aw.rs  omap_b.rs  omap_c_w.rs  omap_d_e.rs  omap_d_ge.rs  omap_e.rs  omap_ge.rs  omap_iw.rs  omap_w.rs  parsed_buffer.rs  token_iter.rs  word_motion.rs  xmap_aw.rs  xmap_b.rs  xmap_e.rs  xmap_ge.rs  xmap_iw.rs  xmap_w.rs
rust_backend/jieba_vim_rs_core/src/motion/core/: buffer.rs  failure.rs  iter.rs  mod.rs  motion.rs  position.rs
rust_backend/jieba_vim_rs_core/src/motion/motions/: mod.rs  text_object.rs
rust_backend/jieba_vim_rs_core/src/motion/motions/text_object/: bckend_word.rs  fwd_word.rs
rust_backend/jieba_vim_rs_core/src/motion/policy/: adjust_cursor.rs  d_special.rs  exclusive_special.rs  mod.rs  position_cursor.rs  text_object_change_yank_fix_rangle.rs  text_object_fix_mtype.rs  yank_linewise.rs  zero_off.rs
rust_backend/jieba_vim_rs_core/src/motion/primitives/: misc.rs  mod.rs  predicate.rs
rust_backend/jieba_vim_rs_core/src/motion/primitives/text_object/: bck_word.rs  bckend_word.rs  current_word.rs  end_word.rs  fwd_word.rs  mod.rs  prev_word.rs
rust_backend/jieba_vim_rs_core/src/token/: char.rs  isk.rs  jieba.rs  mod.rs  token_iter.rs  tokenize.rs  utils.rs
rust_backend/jieba_vim_rs_core/tests/: .gitattributes  README.md  golden_master.rs  imap_arrow.rs  keyword_cutter.rs  nvim_v0_10_2_py311.rs  nvim_v0_11_5_py311.rs  vim_v8_2_2876_py311.rs  vim_v9_1_0000_py311.rs
rust_backend/jieba_vim_rs_metatest/: Cargo.toml
rust_backend/jieba_vim_rs_metatest/src/: bootstrap.rs  cli.rs  dots_progress.rs  lib.rs  main.rs  parsing.rs  unit_verification.rs  vimscript_transpiler.rs
rust_backend/jieba_vim_rs_metatest/src/rust_transpiler/: mod.rs  rust_test.rs
rust_backend/jieba_vim_rs_metatest/src/vimscript_transpiler/: bootstrap.rs  mod.rs  unit_verification.rs
rust_backend/jieba_vim_rs_test/: Cargo.toml
rust_backend/jieba_vim_rs_test/src/: cursor_marker.rs  keyword_cutter.rs  lib.rs
rust_backend/jieba_vim_rs_test/src/verified_case/: base.rs  verify.rs
rust_backend/jieba_vim_rs_test/src/verified_case/cases/: base.rs  mod.rs  nmap_b.rs  nmap_e.rs  nmap_ge.rs  nmap_w.rs  omap_c_b.rs  omap_c_e.rs  omap_c_ge.rs  omap_c_w.rs  omap_d_b.rs  omap_d_e.rs  omap_d_ge.rs  omap_d_w.rs  omap_y_b.rs  omap_y_e.rs  omap_y_ge.rs  omap_y_w.rs  utils.rs  xmap_b.rs  xmap_e.rs  xmap_ge.rs  xmap_w.rs
rust_backend/jieba_vim_rs_test/src/verified_case/cases/templates/: execute_nmap.j2  execute_omap_c.j2  execute_omap_d.j2  execute_omap_y.j2  execute_xmap.j2  setup.j2  setup_omap.j2
rust_backend/jieba_vim_rs_test_macro/: Cargo.toml
rust_backend/jieba_vim_rs_test_macro/src/: lib.rs  verified_case.rs
rust_backend/src/: lib.rs  wrappers.rs
test/: .gitignore  README.md  pyproject.toml  requirements.txt  run_test.sh  test_jieba.py  vimrc
test/cases/: IGNORED_xmap_ge_eol.vader.j2  Makefile  d-special_nvim.jieba_test_case  empty.jieba_test_case  err.jieba_test_case  hanzi_sanity.jieba_test_case  issue_11_reg.vader.j2  issue_11_reg_d_special.vader.j2  issue_11_reg_d_special_nvim.vader.j2  issue_11_reg_d_special_vim.vader.j2  (+18 more)
test/jieba_test_metatest/: .gitignore  pyproject.toml
test/jieba_test_metatest/src/jieba_test_metatest/: __init__.py  basic_integrated_verification.py  dots_progress.py  executor.py  integrated_test.py  motion_keys.py  parser.py  test_basic_integrated_verification.py  test_parser.py  test_vimscript_transpiler.py  version.py  vimscript_transpiler.py
(+29 files in other folders)
