[package]
name = "jieba_navi_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jieba_navi_rs"
crate-type = ["cdylib"]

[dependencies]
# Put vim-compatible python abi in pyo3 features.
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py39"] }
jieba-rs = { version = "0.7", default-features = false }
regex = "1.10"
const_format = "0.2"
once_cell = "1.19"

[build-dependencies]
pyo3-build-config = "0.22"
symlink = "0.1"
curl = "0.4"
