[project]
name = "jieba-vim-benchmark"
version = "0.1.0"
description = "jieba.vim benchmark harness"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
