[package]
name = "jieba_vim_rs_core"
version = "0.1.2"
edition = "2021"

[dependencies]
unic-emoji-char = "0.9"

[dev-dependencies]
jieba-rs = "0.7"
proptest = "1.0"
ctor = "0.2.8"
once_cell = "1.20"
jieba_vim_rs_test = { path = "../jieba_vim_rs_test" }
jieba_vim_rs_test_macro = { path = "../jieba_vim_rs_test_macro" }

[features]
verifiable_case = []
