[package]
name = "jieba_vim_rs_core"
version = "0.1.4"
edition = "2021"

[dependencies]
unic-emoji-char = "0.9"
santiago = "1.3"

[dev-dependencies]
jieba-rs = "0.7"
proptest = "1.0"
ctor = "0.2.9"
once_cell = "1.20"
trie-rs = "0.4"
jieba_vim_rs_test = { path = "../jieba_vim_rs_test" }
jieba_vim_rs_test_macro = { path = "../jieba_vim_rs_test_macro" }

[features]
verifiable_case = []
