[package]
name = "jieba_vim_rs_binding_py3"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jieba_vim_rs"
crate-type = ["cdylib"]

[dependencies]
# Put vim-compatible python abi in pyo3 features.
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py37"] }
jieba-rs = { version = "0.10.2" }
jieba_vim_rs_core = { path = "../jieba_vim_rs_core" }

[build-dependencies]
pyo3-build-config = "0.28.0"
