[package]
name = "jieba_vim_rs_core"
version = "0.1.8"
edition = "2024"

[dependencies]
unic-emoji-char = "0.9"

[dev-dependencies]
proptest = "1.10"
once_cell = "1.21"
trie-rs = "0.4"
jieba_vim_rs_test = { path = "../jieba_vim_rs_test" }
jieba_vim_rs_test_macro = { path = "../jieba_vim_rs_test_macro" }

[features]
verifiable_case = []
