[package]
name = "jieba_vim_rs_core"
version = "0.6.0"
edition = "2024"

[dependencies]
unic-emoji-char = "0.9"

[dev-dependencies]
proptest = "1.11"
jieba_vim_rs_test = { path = "../jieba_vim_rs_test" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
libtest-mimic = "0.8.2"
bstr = "1.12.1"

[[test]]
name = "golden_master"
harness = false
