[package]
name = "jieba_vim_rs_metatest"
version = "0.2.26"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.2"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
